--- a/diplom/package.json
+++ b/diplom/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-med-img-viewer": "^0.2.0",
     "react-scripts": "4.0.3",
+    "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
